# be15-fin-deveagles-beautifly

./: .gitignore  README.md  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  feature_request.md  feature_request.yml  refactor.yml
.github/workflows/: all-events-notify.yml  auto-assign-issue.yml  bug-issue-notify.yml  playwright.yml  pr-copy-issue-body.yml  pr-review-notify.yml  scheduled-build-test.yml
.husky/: pre-commit
be15_DevEagles_BE/: build.gradle  settings.gradle
be15_DevEagles_BE/src/main/resources/: application.yml  logback-spring.xml
be15_DevEagles_DA/: .gitignore  Dockerfile  Makefile  README.md  create_preference_samples.py  create_risk_samples.py  docker-compose-etl.yml  docker-compose.yml  env.example  etl_requirements.txt  pyproject.toml  requirements.txt  run_dashboard.py  run_dashboard_duckdb.py  run_tests.py  simple_test.py  test_connection.py  test_etl.py  test_preference.py  test_risk_tagging.py  test_segmentation.py  verify_segmentation.py
be15_DevEagles_DA/airflow/dags/: crm_to_duckdb_etl.py
be15_DevEagles_DA/config/: development.yaml  local.yaml.example  production.yaml  staging.yaml
be15_DevEagles_DA/src/analytics/: __init__.py  cli.py
be15_DevEagles_DA/src/analytics/api/: __init__.py  main.py
be15_DevEagles_DA/src/analytics/api/routes/: health.py  risk_tagging.py
be15_DevEagles_DA/src/analytics/assets/: disable-react-warnings.js
be15_DevEagles_DA/src/analytics/core/: __init__.py  config.py  database.py  duckdb_client.py  logging.py
be15_DevEagles_DA/src/analytics/dashboard/: __init__.py  bi_dashboard.py  bi_dashboard_duckdb.py  constants.py  theme.py
be15_DevEagles_DA/src/analytics/dashboard/components/: common.py
be15_DevEagles_DA/src/analytics/dashboard/utils/: decorators.py  serializers.py
be15_DevEagles_DA/src/analytics/etl/: __init__.py  airflow_dag.py  base.py  base_extractors.py  beautifly_extractors.py  beautifly_pipeline.py  config.py  extractors.py  loaders.py  pipeline.py  transformers.py
be15_DevEagles_DA/src/analytics/ml/: __init__.py  churn_model.py
be15_DevEagles_DA/src/analytics/models/: __init__.py  analytics.py  base.py  beautifly_crm.py  crm.py
be15_DevEagles_DA/src/analytics/services/: __init__.py  churn_prediction.py  churn_prediction_duckdb.py  cohort_retention.py  cohort_retention_duckdb.py  preference.py  risk_tagging.py  segmentation.py  segmentation_duckdb.py
be15_DevEagles_DA/tests/: __init__.py  conftest.py
be15_DevEagles_DA/tests/etl/: test_beautifly_etl.py  test_etl.py
be15_DevEagles_DA/tests/integration/: test_db_connection.py
be15_DevEagles_DA/tests/services/: test_cohort_retention.py  test_preference.py  test_risk_tagging.py  test_segmentation.py
be15_DevEagles_DA/tests/utils/: inspect_db_schema.py  simple_test.py  verify_segmentation.py
be15_DevEagles_FE/: .lintstagedrc.json  eslint.config.js  index.html  jsconfig.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
be15_DevEagles_FE/playwright-report/: index.html
be15_DevEagles_FE/src/: App.vue  main.js
be15_DevEagles_FE/src/assets/: base.css
be15_DevEagles_FE/src/assets/css/: buttons.css  components.css  empty-state.css  list-components.css  primevue-theme.css  styleguide.css  toggle.css  tooltip.css
be15_DevEagles_FE/src/components/common/: BaseAlert.vue  BaseBadge.vue  BaseButton.vue  BaseCalendar.vue  BaseCard.vue  BaseConfirm.vue  BaseDrawer.vue  BaseForm.vue  BaseGradeSelector.vue  BaseLoading.vue  BaseModal.vue  BasePopover.vue  BaseTable.vue  BaseTagSelector.vue  BaseToast.vue  BaseToggleSwitch.vue  BaseWindow.vue  CompactTemplateSelector.vue  DarkModeToggle.vue  Pagaination.vue  PrimeDatePicker.vue  TemplateForm.vue  TemplateSelectorModal.vue  TheHeader.vue  TheLayout.vue  TheSidebar.vue  VCalendarWrapper.vue  index.js
be15_DevEagles_FE/src/components/icons/: ArrowLeftIcon.vue  BarChartIcon.vue  BellIcon.vue  CalendarIcon.vue  ChevronDownIcon.vue  ChevronRightIcon.vue  DollarIcon.vue  EditIcon.vue  FilterIcon.vue  HomeIcon.vue  InfoTooltipIcon.vue  LinkIcon.vue  ListIcon.vue  MegaphoneIcon.vue  MessageCircleIcon.vue  NewIcon.vue  PinIcon.vue  PinOffIcon.vue  PlusIcon.vue  SearchIcon.vue  SettingsIcon.vue  ShoppingBagIcon.vue  SortIcon.vue  TagIcon.vue  TicketIcon.vue  TrashIcon.vue  UserIcon.vue  UsersIcon.vue  WorkflowIcon.vue  XIcon.vue  index.js
be15_DevEagles_FE/src/components/layout/: TheHeader.vue  TheLayout.vue  TheSidebar.vue  index.js
be15_DevEagles_FE/src/composables/: useDarkMode.js  useListManagement.js  useToast.js
be15_DevEagles_FE/src/constants/: messages.js  mockData.js
be15_DevEagles_FE/src/features/analytics/api/: baseAnalyticsAPI.js  reservationAnalytics.js  salesAnalytics.js
be15_DevEagles_FE/src/features/analytics/components/: LocalDarkModeToggle.vue  StatCard.vue
be15_DevEagles_FE/src/features/analytics/composables/: useAnalyticsCore.js  useLocalDarkMode.js  useSalesAnalytics.js  useUsageAnalytics.js
be15_DevEagles_FE/src/features/analytics/config/: baseChartOptions.js  chartOptions.js  chartThemes.js  index.js  (+4 more)
be15_DevEagles_FE/src/features/campaigns/: index.js  routes.js
be15_DevEagles_FE/src/features/coupons/: CouponForm.vue  CouponList.vue  index.js  routes.js
be15_DevEagles_FE/src/features/customer/: routes.js
be15_DevEagles_FE/src/features/schedule/: router.js
be15_DevEagles_FE/src/features/schedules/: routes.js
be15_DevEagles_FE/src/features/staffs/: route.js
be15_DevEagles_FE/src/features/users/: route.js
be15_DevEagles_FE/src/features/workflows/: routes.js
be15_DevEagles_FE/src/plugins/: LOGGER_README.md  LoggerManager.js  axios.js  darkMode.js  logger.js
be15_DevEagles_FE/src/routes/: index.js
be15_DevEagles_FE/src/store/: analytics.js  auth.js  metadata.js  useChatStore.js  userStatus.js
be15_DevEagles_FE/src/styles/: list-components.css
be15_DevEagles_FE/src/utils/: formatters.js
be15_DevEagles_FE/src/views/: Home.vue
be15_DevEagles_FE/tests/: example.spec.js
docs/: company-information.json
scripts/: create-branch.sh  create-pr.sh
(+1027 files in other folders)
